--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,500,700");
 * {
   margin: 0;
   padding: 0;
@@ -19,13 +19,13 @@ ul {
 
 .title-heading {
   font-size: 26px;
-  font-weight: 400;
+  font-weight: 500;
   color: #335A7F;
   padding-bottom: 10px; }
 
 .sub-heading {
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 500;
   padding-bottom: 10px; }
 
 .sub-sub-heading {
@@ -53,8 +53,12 @@ ul {
 .white {
   color: #FFFFFF; }
 
+.theme-color {
+  color: #335A7F; }
+
 .triangle {
-  font-size: 12px; }
+  font-size: 12px;
+  font-style: normal; }
 
 hr {
   margin: 5px auto 0 auto;
@@ -64,6 +68,19 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3); }
 
+.main-container {
+  display: flex;
+  flex-direction: row; }
+  .main-container .side-list {
+    margin-top: 5em;
+    padding-right: 50px; }
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 10px; }
+
+/* TOP NAVIGATION */
 .logo {
   text-align: center; }
 
@@ -80,7 +97,6 @@ hr {
   font-weight: 300;
   text-transform: uppercase; }
 
-/* .top-navigation */
 .top-navigation {
   text-align: center; }
 
@@ -94,7 +110,7 @@ ul {
 ul li {
   display: inline-block;
   position: relative;
-  background: #ffffff;
+  background: #FFFFFF;
   color: #000000;
   cursor: pointer;
   padding: 12px 17px;
@@ -125,7 +141,7 @@ ul li ul {
 ul li ul li {
   display: block;
   color: black;
-  background: #ffffff; }
+  background: #FFFFFF; }
 
 ul li ul li:hover {
   background: #F0F0F0; }
@@ -169,7 +185,7 @@ ul li:hover ul {
     bottom: -1px;
     width: 100%;
     height: 1px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #FFFFFF;
     content: ""; }
 
 .pilot-copyright {
@@ -214,17 +230,12 @@ ul li:hover ul {
       width: 23%;
       font-weight: 300; }
 
-.container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 10px; }
-
 .list {
   padding: 0 0 10px 15px;
   font-style: italics; }
   .list .list-item {
-    font-weight: 300;
-    font-size: 15px; }
+    font-size: 15px;
+    font-weight: 300; }
 
 .columns-fifty-fifty {
   display: flex;
@@ -253,7 +264,8 @@ ul li:hover ul {
   max-width: 400px;
   background: linear-gradient(50deg, #4AC948, #228B22);
   color: #FFFFFF; }
-.leed-energy .leed-existing, .leed-energy .energy-water-savings {
+.leed-energy .leed-existing,
+.leed-energy .energy-water-savings {
   width: 50%;
   min-width: 250px;
   max-width: 350px; }
@@ -266,6 +278,9 @@ ul li:hover ul {
   margin-top: 15px; }
   .leed-energy .green-building .paragraph {
     font-size: 12px; }
+
+.development-planning.container {
+  max-width: 700px; }
 
 .development-planning .body-image {
   display: block;
@@ -310,7 +325,8 @@ ul li:hover ul {
     display: flex;
     flex-direction: column; }
 
-  .leed-existing, .energy-water-savings {
+  .leed-existing,
+  .energy-water-savings {
     width: 100%; }
 
   .bio {
