--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -105,6 +105,15 @@ hr {
   .side-list {
     margin-top: 5em;
     padding-right: 50px;
+    .sub-sub-heading {
+      padding-bottom: 5px;
+    }
+    .sub-sub-heading.leed-energy {
+      padding: 4px;
+      border-radius: 3px;
+      background-color: #228B22;
+      color: $white;
+    }
   }
 }
 
@@ -288,11 +297,12 @@ ul li:hover ul {
   padding-bottom: 30px;
   .sub-heading {
     text-align: center;
-    padding-bottom: 25px;
+    padding-bottom: 15px;
     color: $theme-color;
   }
   .services-list {
     text-align: center;
+    padding-bottom: 10px;
     .service {
       display: inline-block;
       width: 23%;
@@ -433,6 +443,9 @@ ul li:hover ul {
   .columns-fifty-fifty {
     display: flex;
     flex-direction: column;
+  }
+  .side-list {
+    display: none;
   }
   .leed-existing,
   .energy-water-savings {
