added mobile navigation

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -88,6 +88,9 @@ hr {
   padding: 10px; }
 
 /* TOP NAVIGATION */
+.mobile-navigation {
+  display: none; }
+
 .logo {
   text-align: center; }
 
@@ -211,7 +214,7 @@ ul li:hover ul {
   background-size: cover;
   height: 100vh;
   max-width: 100%;
-  padding-top: 200px;
+  padding-top: 10em;
   overflow: none; }
   .masthead .masthead-text {
     max-width: 600px;
@@ -305,7 +308,7 @@ ul li:hover ul {
   margin-top: 10px; }
   .property-management .properties .property-image {
     display: block;
-    margin: 0 auto;
+    margin: 0 auto 5px auto;
     height: auto;
     max-width: 350px; }
 
@@ -329,6 +332,32 @@ ul li:hover ul {
   background-color: #8DAABD; }
 
 @media (max-width: 767px) {
+  .sub-logo {
+    font-size: 18px; }
+
+  .mobile-navigation {
+    display: block; }
+    .mobile-navigation li {
+      width: 100%; }
+      .mobile-navigation li a {
+        background-color: #335A7F;
+        padding: 5px;
+        border-radius: 3px;
+        color: #FFFFFF; }
+
+  .desktop-navigation {
+    display: none; }
+
+  .masthead {
+    padding-top: 6em; }
+
+  .services-list.mobile-list {
+    max-width: 130px;
+    margin: 0 auto;
+    text-align: left; }
+    .services-list.mobile-list .service {
+      width: 100%; }
+
   .columns-fifty-fifty {
     display: flex;
     flex-direction: column; }
